# math

./: .gitignore  CMakeLists.txt  README.md  makefile  mat2.txt  mat3.txt  mat4.txt
include/: own.h
src/: main.cpp
src/matrix/: CMakeLists.txt
src/matrix/include/: complex.h  matrix.h
src/matrix/include/own/: complex.h  matrix.h
src/matrix/src/: complex.cpp  complex.hh  matrix.cpp  matrix.hh
src/matrix/test/: test_complex.cpp
src/polynomial/: CMakeLists.txt
src/polynomial/include/own/: binomial.h  polynomial.h
src/polynomial/src/: binomial.cpp  binomial.hh  polynomial.cpp  polynomial.hh
